--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bootstrap";
+
+body {
+    background: color(srgb 0.1264 0.1636 0.2285);
+}
