--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -4,13 +4,17 @@
             <div class="card-body p-4">
                 <todos
                     [todos]="(todos$ | async)!"
+                    [todosTotal]="(todosTotal$ | async)!"
+                    [completedTodosTotal]="(completedTodosTotal$ | async)!"
                     [currentTodo]="(currentTodo$ | async)!"
-                    (todoChecked)="complete($event)"
+                    (todoChecked)="markAsCompleted($event)"
                     (todoCreated)="create($event)"
                     (todoDeleted)="delete($event)"
                     (todoSelected)="select($event)"
-                    (todoUnchecked)="uncomplete($event)"
+                    (todoUnchecked)="markAsNotCompleted($event)"
                     (todoUpdated)="update($event)"
+                    (markAllAsCompleted)="markAllAsCompleted()"
+                    (markAllAsNotCompleted)="markAllAsNotCompleted()"
                 ></todos>
             </div>
         </div>
