--- a/apps/doable/src/app/todo-list/todo-list.component.html
+++ b/apps/doable/src/app/todo-list/todo-list.component.html
@@ -11,6 +11,7 @@
                     [todos]="(todos$ | async)!"
                     [currentTodo]="(currentTodo$ | async)!"
                     (todoChecked)="markAsCompleted($event)"
+                    (todoCancelled)="select(null)"
                     (todoCreated)="create($event)"
                     (todoDeleted)="delete($event)"
                     (todoSelected)="select($event)"
