--- a/apps/doable/src/app/doable/doable-list/doable-list.component.scss
+++ b/apps/doable/src/app/doable/doable-list/doable-list.component.scss
@@ -1,5 +1,5 @@
 :host {
     display: block;
-    max-height: calc(100vh - 50px - 0.5rem - 38px - 3rem - 0.5rem); // TODO
+    max-height: calc(100% - 38px - 0.5rem) ;
     overflow: auto;
 }
