--- a/apps/doable/src/app/doable/doable.component.html
+++ b/apps/doable/src/app/doable/doable.component.html
@@ -1,7 +1,7 @@
 <div class="row d-flex justify-content-center align-items-center h-100 doable">
     <doable-header class="card rounded-3 mb-2"></doable-header>
     <div class="card rounded-3 doable-content">
-        <div class="card-body p-4">
+        <div class="card-body p-4 h-100">
             <doable-actions
                 (create)="create($event)"
                 (clear)="clear()"
