--- a/apps/doable/src/app/doable/doable-item/doable-item.component.html
+++ b/apps/doable/src/app/doable/doable-item/doable-item.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="handleFormSubmit()" data-testId="todo-form">
+<form [formGroup]="form" (ngSubmit)="handleFormSubmit()" data-testId="todo-form" [@openClose]="selected ? 'open' : 'closed'">
   <div class="form-check w-100">
     <div class="d-flex justify-content-between">
       <div class="w-100">
@@ -18,6 +18,7 @@
         >{{ todo.title }}</label>
       </div>
       <button
+        title="Remove"
         type="button"
         class="btn-close"
         aria-label="Close"
