--- a/apps/doable/src/app/doable/doable-header/doable-header.component.html
+++ b/apps/doable/src/app/doable/doable-header/doable-header.component.html
@@ -1,8 +1,9 @@
-<div class="card-body p-4">
+<div class="card-body d-flex justify-content-between align-items-center p-0">
   <img
     class="logo"
     src="../../assets/logo.png"
     alt="Doable logo"
     data-testId="todo-header-logo"
   >
+  <doable-theme-switcher></doable-theme-switcher>
 </div>
