--- a/apps/doable/src/app/doable/doable-list/doable-list.component.html
+++ b/apps/doable/src/app/doable/doable-list/doable-list.component.html
@@ -1,6 +1,11 @@
-<ul class="list-group mb-1">
+<ul
+    class="list-group mb-1"
+    data-testId="doable-list-drop"
+    cdkDropList
+>
     <li
         doableItem
+        cdkDrag
         *ngFor="let todo of todos | order"
         class="todo list-group-item"
         [selected]="currentTodo?.id === todo.id"
@@ -11,5 +16,6 @@
         (doubleClicked)="handleTodoSelection(todo)"
         (saved)="handleTodoUpdated($event)"
         (unchecked)="handleTodoUnchecked(todo)"
-    ></li>
+    >
+    </li>
 </ul>
