--- a/apps/doable/src/app/doable/doable-list/doable-list.component.scss
+++ b/apps/doable/src/app/doable/doable-list/doable-list.component.scss
@@ -2,3 +2,11 @@
     display: block;
     overflow: auto;
 }
+
+.cdk-drag-placeholder {
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
+    background-color: #2b2d2e;
+}
